RegressionTests/TestSuiteExport/reject/missing_type.blade
// EXPECT: fail
// DIAGNOSTICS: ExpectedTypeName

cog var x: = 0;